@@ -18,7 +18,7 @@ libglide_la_SOURCES = glide.F90 glide_setup.F90 glide_types.F90 glide_temp.F90 \
                       isostasy_types.F90 glide_lithot.F90 glide_lithot3d.F90 \
                       glide_lithot1d.F90 glide_profile.F90 glimmer_routing.F90 \
                       glide_glenflow.F90 \
-                      glide_deriv.F90 glide_bwat.F90 glide_tempFullSoln.F90 \
+                      glide_bwat.F90 glide_tempFullSoln.F90 \
                       glide_thckADI.F90 glide_thckCommon.F90
 
 
